apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@minor__cors_conflicting_config.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
snapshot_kind: text
---
---
cors:
  policies:
    - origins:
        - "https://example.com"
    - origins:
        - "https://studio.apollographql.com"
