apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@minor__cors_origins_simple.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
snapshot_kind: text
---
---
cors:
  policies:
    - origins:
        - "https://studio.apollographql.com"
        - "https://example.com"
