apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@minor__cors_origins_with_settings.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
snapshot_kind: text
---
---
cors:
  allow_credentials: true
  methods:
    - GET
    - POST
    - OPTIONS
  allow_headers:
    - content-type
    - authorization
  expose_headers:
    - x-custom-header
  max_age: 3600s
  policies:
    - origins:
        - "https://studio.apollographql.com"
        - "https://myapp.com"
        - "https://api.example.com"
