apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@minor__subscription_dedup.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
subscription:
  enabled: true
  queue_capacity: 100000
  max_opened_subscriptions: 100
  deduplication:
    all:
      enabled: true
